--- a/LinqLabs/LinqLabs.csproj
+++ b/LinqLabs/LinqLabs.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Frm作業_3.designer.cs">
       <DependentUpon>Frm作業_3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm作業_4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm作業_4.Designer.cs">
+      <DependentUpon>Frm作業_4.cs</DependentUpon>
+    </Compile>
     <Compile Include="NWDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm作業_3.resx">
       <DependentUpon>Frm作業_3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm作業_4.resx">
+      <DependentUpon>Frm作業_4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
